--- a/Javascript.html
+++ b/Javascript.html
@@ -6,5 +6,6 @@ document.write(Know Your Knowledge);
 </head>
 <body>
 <h2>EXPAND YOUR KNOWLEDGE</h2>
+<p>This is to teach you the basics of javascript.</p>
 </body>
 </html>
